<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background"> <!--background of whole page-->

        <!--******************** Login text ***********************-->
        <TextView
            android:id="@+id/log_in_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:layout_marginVertical="20sp"

            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            />

        <!--******************** Username Input ***********************-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_in_text"
            app:layout_constraintBottom_toTopOf="@id/password_input"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp"

            app:boxCornerRadiusBottomEnd="20sp"
            app:boxCornerRadiusBottomStart="20sp"
            app:boxCornerRadiusTopEnd="20sp"
            app:boxCornerRadiusTopStart="20sp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"

            android:hint="@string/username_hint"
            app:startIconDrawable="@drawable/ic_username"
            app:endIconMode="clear_text"

            app:hintTextColor="@color/black"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>




        <!--******************** Password Input ***********************-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_input"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp"

            app:boxCornerRadiusBottomEnd="20sp"
            app:boxCornerRadiusBottomStart="20sp"
            app:boxCornerRadiusTopEnd="20sp"
            app:boxCornerRadiusTopStart="20sp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"

            android:hint="@string/password_hint"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"

            app:hintTextColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--******************** Login Button ***********************-->


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100sp"
            android:background="@drawable/login_button_background"
            android:text="@string/login_btn_text"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:layout_constraintVertical_bias="0.135" />

        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="@id/login_button"
            android:layout_marginTop="20sp">
            <TextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:padding="5sp"
                />
            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:padding="5sp"

                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>