<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfile">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/background_color"> <!--background of whole page-->

        <!--******************** Login text ***********************-->

        <!--******************** Username Input ***********************-->

        <TextView
            android:id="@+id/create_profile_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginVertical="20sp"
            android:text="@string/create_profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/age_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_profile_text"
            app:layout_constraintBottom_toTopOf="@id/gender_input"
            android:layout_marginHorizontal="100sp"
            android:layout_marginVertical="10sp"

            app:boxCornerRadiusBottomEnd="20sp"
            app:boxCornerRadiusBottomStart="20sp"
            app:boxCornerRadiusTopEnd="20sp"
            app:boxCornerRadiusTopStart="20sp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"

            android:hint="@string/age"

            app:hintTextColor="@color/black"

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/gender_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_input"
            app:layout_constraintBottom_toTopOf="@id/profession_input"
            android:layout_marginHorizontal="100sp"
            android:layout_marginVertical="10sp"
            android:orientation="vertical"
            android:background="@drawable/input_bg"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp"
                android:layout_marginStart="10sp"
              />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textColor="@color/black"
             android:layout_marginRight="20sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Female"/>


        </RadioGroup>


        <!--******************** Password Input ***********************-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/profession_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_input"
            android:layout_marginHorizontal="100sp"
            android:layout_marginVertical="10sp"

            app:boxCornerRadiusBottomEnd="20sp"
            app:boxCornerRadiusBottomStart="20sp"
            app:boxCornerRadiusTopEnd="20sp"
            app:boxCornerRadiusTopStart="20sp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"

            android:hint="@string/profession"
            app:hintTextColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profession_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--******************** Login Button ***********************-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/hometown_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profession_input"
            android:layout_marginHorizontal="100sp"
            android:layout_marginVertical="10sp"

            app:boxCornerRadiusBottomEnd="20sp"
            app:boxCornerRadiusBottomStart="20sp"
            app:boxCornerRadiusTopEnd="20sp"
            app:boxCornerRadiusTopStart="20sp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"

            android:hint="@string/hometown"

            app:hintTextColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hometown_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_interest_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Add Interests"
            android:textAllCaps="false"
            android:textSize="16sp"

            android:background="@drawable/input_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="100sp"
            android:drawableEnd="@drawable/ic_next_arrow"
            app:layout_constraintTop_toBottomOf="@id/hometown_input"
            android:layout_marginVertical="10sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>